--- a/Selenium 2/test-output/old/Suite/classes.html
+++ b/Selenium 2/test-output/old/Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>AdvanceSelenium.DWS_TC_011</td>
+<td>POM.TC_DWS_011</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toNewproductsPage</td>
+<td>toJewelryPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -42,14 +42,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_010</td>
+<td>POM.TC_DWS_010</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toNewsPage</td>
+<td>toDigitalPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -80,14 +80,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_002</td>
+<td>POM.TC_DWS_002</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCheckComputerPage</td>
+<td>toLoginButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -118,14 +118,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_013</td>
+<td>POM.TC_DWS_013</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toAddProduct</td>
+<td>toShoppingcart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -156,14 +156,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_001</td>
+<td>POM.TC_DWS_001</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCheckBooksPage</td>
+<td>toRegisterLink</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -194,14 +194,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_012</td>
+<td>POM.TC_DWS_012</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toScarchTextField</td>
+<td>toGiftCard</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -232,14 +232,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_008</td>
+<td>POM.TC_DWS_004</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toMyAccountPage</td>
+<td>toDisplayPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -270,14 +270,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_007</td>
+<td>POM.TC_DWS_015</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCheckWishlistPage</td>
+<td>toSearchBer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -308,14 +308,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_009</td>
+<td>POM.TC_DWS_003</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toPrivacyNoticePage</td>
+<td>toBookPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -346,14 +346,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_004</td>
+<td>POM.TC_DWS_014</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCheckApparel_ShoesPage</td>
+<td>toWishlist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -384,14 +384,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_015</td>
+<td>POM.TC_DWS_006</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toLogo</td>
+<td>toAccessoriesPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -422,14 +422,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_003</td>
+<td>POM.TC_DWS_017</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCheckElectronicsPage</td>
+<td>toTricentis</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -460,14 +460,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_014</td>
+<td>POM.TC_DWS_005</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toOrderPage</td>
+<td>toNoteBookPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -498,14 +498,14 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_006</td>
+<td>POM.TC_DWS_016</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCheckShoppingcartPage</td>
+<td>toSearchButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -536,14 +536,90 @@
 <td>toclose</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>AdvanceSelenium.DWS_TC_005</td>
+<td>POM.TC_DWS_008</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCheckTricentissPage</td>
+<td>toCellPhonePage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tolunch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>toLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tologout</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>toclose</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>POM.TC_DWS_007</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tocamerapage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tolunch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>toLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tologout</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>toclose</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>POM.TC_DWS_009</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>toApparelAndShoes</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
