--- a/Selenium 2/test-output/old/Suite/reporter-output.html
+++ b/Selenium 2/test-output/old/Suite/reporter-output.html
@@ -1,91 +1,103 @@
 <h2>Reporter output</h2><table><tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>Successfully Navigate to PrivacyNoticePage</td></tr>
+<tr><td>Successfully Open ApparelAndShoesPage</td></tr>
+<tr><td>Product Successfull AddToCart</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>TstCase 004 got executed Successfully</td></tr>
+<tr><td>Successful open CellPhone Page</td></tr>
+<tr><td>Successfully Add to Cart</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>Successfully Capture The Logo</td></tr>
+<tr><td>CameraPage Open</td></tr>
+<tr><td>Successfull Add to compare list</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>TstCase 003 got executed Successfully</td></tr>
+<tr><td>successfully</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>Successfully Navigate to Order Page</td></tr>
+<tr><td>Successfully Tricentis Page Opened</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>TstCase 002 got executed Successfully</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>Successfully Add to Product</td></tr>
+<tr><td>Successfully Search The Product</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>TestCase 001 got executed Successfully</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>successfully Navigate to ScarchTextField</td></tr>
+<tr><td>Fail Pass The Data In Search TextField</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>Successfully Account Page Open</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>TstCase 007 got executed Successfully</td></tr>
+<tr><td>Successfully Display Wishlist Page</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>TstCase 006 got executed Successfully</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>TstCase 008 got executed Successfully</td></tr>
+<tr><td>Successfully Display Shoping Page</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>Successfully Navigate to New Product Page</td></tr>
+<tr><td>Logged out Successfully</td></tr>
+<tr><td>Browser got Lunch Successfully</td></tr>
+<tr><td>Browser got Maximize</td></tr>
+<tr><td>Successfully Home Page Got Display</td></tr>
+<tr><td>Successsfuly Open GiftPage</td></tr>
+<tr><td>Product Successfully AddToCart</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 <tr><td>Browser got Lunch Successfully</td></tr>
 <tr><td>Browser got Maximize</td></tr>
 <tr><td>Successfully Home Page Got Display</td></tr>
-<tr><td>Successfully Navigate to News Page</td></tr>
+<tr><td>Successfilly Open JewelryPage</td></tr>
+<tr><td>Product Successfully AddToCart</td></tr>
+<tr><td>Logged out Successfully</td></tr>
+<tr><td>Browser successfully Closed</td></tr>
+<tr><td>Browser got Lunch Successfully</td></tr>
+<tr><td>Browser got Maximize</td></tr>
+<tr><td>Successfully Home Page Got Display</td></tr>
+<tr><td>Successfully open DigitalPage</td></tr>
+<tr><td>Product Successfully AddToCart</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser successfully Closed</td></tr>
 </table>
