--- a/Selenium 2/test-output/old/Default suite/classes.html
+++ b/Selenium 2/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>AdvanceSelenium.DWS_TC_013</td>
+<td>POM.TC_DWS_006</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toAddProduct</td>
+<td>toAccessoriesPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
