--- a/Selenium 2/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium 2/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="768fa9">  <td>24/06/27 22:05:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DWS_TC_013.toAddProduct()[pri:0, instance:AdvanceSelenium.DWS_TC_013@647e447]">toAddProduct</td> 
+<tr bgcolor="768fa9">  <td>24/08/18 21:37:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DWS_006.toAccessoriesPage()[pri:0, instance:POM.TC_DWS_006@647e447]">toAccessoriesPage</td> 
   <td>main@1661123505</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/06/27 22:05:26</td>   <td>-8827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.toLogin()[pri:0, instance:AdvanceSelenium.DWS_TC_013@647e447]">&gt;&gt;toLogin</td> 
-<td>&nbsp;</td>  <td>main@1661123505</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/06/27 22:05:39</td>   <td>4628</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.toclose()[pri:0, instance:AdvanceSelenium.DWS_TC_013@647e447]">&lt;&lt;toclose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1661123505</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/06/27 22:05:36</td>   <td>1605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tologout()[pri:0, instance:AdvanceSelenium.DWS_TC_013@647e447]">&lt;&lt;tologout</td> 
-<td>&nbsp;</td>  <td>main@1661123505</td>   <td></td> </tr>
-<tr bgcolor="8f8cc1">  <td>24/06/27 22:05:02</td>   <td>-32474</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.tolunch(java.lang.String)[pri:0, instance:AdvanceSelenium.DWS_TC_013@647e447]">&gt;&gt;tolunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1661123505</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/18 21:37:53</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.toLogin()[pri:0, instance:POM.TC_DWS_006@647e447]">&gt;&gt;toLogin</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/18 21:37:53</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.toclose()[pri:0, instance:POM.TC_DWS_006@647e447]">&lt;&lt;toclose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>24/08/18 21:37:53</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tologout()[pri:0, instance:POM.TC_DWS_006@647e447]">&lt;&lt;tologout</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
